--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
                     </ul>
                 </div>
                 <div data-aos-duration="1000" data-aos="fade-up" class="hamburger">
-                    <a href="#hamburger-menu" data-modal="burger" class="mobile-menu" id="mobile-menu-btn">
+                    <a href="#hamburger-menu" class="mobile-menu" id="mobile-menu-btn">
                     <i class="fas fa-bars"></i>
                     </a>
                 </div>
             </div>
                 <div class="business" data-aos-duration="1500" data-aos="fade-up">Управляй своим бизнесом через Smartphone</div>
                 <h1 data-aos-duration="1500" data-aos="fade-up">PRENGI - Платформа для прозрачного управления бизнесом</h1>
-                <button data-aos-duration="1500" data-aos="fade-up" data-modal="order" class="btn btn-mini">Получить доступ</button>
+                <button data-aos-duration="1500" data-aos="fade-up" data-modal class="btn btn-mini">Получить доступ</button>
                 <img data-aos-duration="2000" data-aos="fade-up" src="img/header_phone.png" class="header-phone" alt="Phone">
         </div>
     </section>
@@ -144,7 +144,7 @@
 
                 <div data-aos-duration="3000" data-aos="fade-up" class="tabs-container">
                 
-                    <div class="tabs-container-item tabs-active">
+                    <div class="tabs-container-item">
                         <img src="img/slide-laptop.png" alt="women">
                     </div>
                     <div class="tabs-container-item">
@@ -226,7 +226,7 @@
         <div class="container">
             <img data-aos-duration="1500" data-aos="fade-down" src="img/callback-picture.png" alt="callback" class="callback-img">
             <div data-aos-duration="2500" data-aos="fade-down" class="callback-text">Приступить очень просто! <br> Нужно получить доступ и начать работу!</div>
-            <button data-aos-duration="2500" data-aos="fade-down" class="btn callback-btn btn-mini">связаться с нами</button>
+            <button data-aos-duration="2500" data-aos="fade-down" data-modal class="btn callback-btn btn-mini">связаться с нами</button>
         </div>
     </section>
     <footer>
@@ -299,7 +299,7 @@
     </div>
 
     <div class="overlay">
-        <div class="modal container-modal" id="order">
+        <div class="modal container-modal">
             <div class="modal-close">&times;</div>
             <div class="modal-subtitle">Заполни форму и мы перезвоним в течении 10 секунд!</div>
             <div>
@@ -310,12 +310,6 @@
                 </form>
             </div>
         </div>
-    </div>
-
-    <div class="modal modal-mini container-modal" id="thanks">
-        <div class="modal-close">&times;</div>
-        <div class="modal-subtitle">Спасибо за вашу заявку!</div>
-        <div class="modal-descr">Наш менеджер свяжется с вами в ближайшее время!</div>
     </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
